front page fixes

--- a/index.html
+++ b/index.html
@@ -42,37 +42,22 @@
     <!-- Spinner End -->
 
     <!-- Topbar Start -->
-    <!-- <div class="container-fluid  px-0">
-        <div class="row g-0 d-none d-lg-flex">
-            <div class="col-lg-6 ps-5 text-start">
-                <div class="h-100 d-inline-flex align-items-center text-white">
-                    <span>Follow Us:</span>
-                    <div class="col-lg-6 text-start">
-                        <div class="h-100 topbar-right d-inline-flex align-items-center text-dark py-2 px-5">
-                            <span class="fs-5 fw-bold me-2"><i class="fa fa-phone-alt me-2"></i>Call Us:</span>
-                            <span class="fs-5 fw-bold">+91- 8192888000</span>
-                        </div>
-                    <a class="btn btn-link text-light" href=""><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-link text-light" href=""><i class="fab fa-twitter"></i></a>
-                    <a class="btn btn-link text-light" href=""><i class="fab fa-linkedin-in"></i></a>
-                    <a class="btn btn-link text-light" href=""><i class="fab fa-instagram"></i></a>
-                </div>
-            </div>
-            </div>
-        </div>
-    </div> -->
 
-    <div class="container text-start">
-        <span class="fs-5 fw-bold me-1 btn btn-link text-dark"><i class="fa fa-phone-alt me-1"></i></span>
-        <span class="fs-5 fw-bold">+91- 8192888000</span>
-        <span class="fs-5 fw-bold me-1 btn btn-link text-dark"><i class="fa fa-envelope me-1"></i></span>
-        <span class="fs-5 fw-bold">vhfastners@gmail.com</span>
-    </div>
-    <div class="container text-end">
-        <a class="btn btn-link text-dark fs-5 fw-bold" href=""><i class="fab fa-facebook-f"></i></a>
-        <a class="btn btn-link text-dark fs-5 fw-bold" href=""><i class="fab fa-twitter"></i></a>
-        <a class="btn btn-link text-dark fs-5 fw-bold" href=""><i class="fab fa-linkedin-in"></i></a>
-        <a class="btn btn-link text-dark fs-5 fw-bold" href=""><i class="fab fa-instagram"></i></a>
+
+    <div class="d-flex container-fluid px-5 align-items-center border-bottom">
+        <div  class="me-auto">
+            <span class="fs-6 fw-bold text-dark"><i class="fa fa-envelope me-1"></i></span>
+            <a href="mailto: vhfastners@gmail.com" class="fs-6 fw-bold text-dark me-2">vhfastners@gmail.com</a>
+            <span class="me-2">|</span>
+            <span class="fs-6 fw-bold text-dark"><i class="fa fa-phone-alt me-1"></i></span>
+            <a href="tel:+918192888000" class="fs-6 fw-bold text-dark">+91- 8192888000</a>
+        </div>
+        <div>
+            <a class="btn btn-link text-dark fs-6 fw-bold" href=""><i class="fab fa-facebook-f"></i></a>
+            <a class="btn btn-link text-dark fs-6 fw-bold" href=""><i class="fab fa-twitter"></i></a>
+            <a class="btn btn-link text-dark fs-6 fw-bold" href=""><i class="fab fa-linkedin-in"></i></a>
+            <a class="btn btn-link text-dark fs-6 fw-bold" href=""><i class="fab fa-instagram"></i></a>
+        </div>
     </div>
 
     <!-- Topbar End -->
@@ -102,7 +87,6 @@
                 </div>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
             </div>
-            <a href="" class="btn btn-primary px-3 d-none d-lg-block">Get A Quote</a>
         </div>
     </nav>
     <!-- Navbar End -->
@@ -110,8 +94,7 @@
 
     <!-- Carousel Start -->
     <div class="container-fluid px-0 mb-5">
-        <img class="w-100" src="Image/Home/Front.jpg" alt="Image">
-
+        <img class="w-100" src="Image/Home/herosectionImage.png" alt="Image">
     </div>
     <!-- Carousel End -->
 
@@ -123,7 +106,7 @@
     <div class="row container align-items-center mx-auto w-100 col-12 px-0  wow fadeIn" data-wow-delay="0.2s">
         <!-- <p class="fw-medium text-uppercase text-primary mb-2">About Us</p> -->
         <div class="col-lg-4 wow fadeIn" data-wow-delay="0.2s">
-            <h1 class="display-5 mb-4">Unbrako Fasteners</h1>
+            <h3 class="mb-4">Unbrako Fasteners</h3>
             <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet
                 diam et
                 eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore
@@ -133,7 +116,7 @@
         </div>
         <div class="col-lg-4 wow fadeIn" data-wow-delay="0.2s">
             <!-- <p class="fw-medium text-uppercase text-primary mb-2">About Us</p> -->
-            <h1 class="display-5 mb-4">NABL Certified Lab</h1>
+            <h3 class="mb-4">NABL Certified Lab</h3>
             <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet
                 diam et
                 eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore
@@ -143,7 +126,7 @@
         </div>
         <div class="col-lg-4 wow fadeIn" data-wow-delay="0.2s">
             <!-- <p class="fw-medium text-uppercase text-primary mb-2">About Us</p> -->
-            <h1 class="display-5 mb-4">Specialized Coatings</h1>
+            <h3 class="mb-4">Specialized Coatings</h3>
             <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet
                 diam et
                 eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore
@@ -153,82 +136,59 @@
         </div>
     </div>
 
-    <!-- <div class="row pt-2">
-                            <div class="col-sm-6">
-                                <div class="d-flex align-items-center">
-                                    <div class="flex-shrink-0 btn-lg-square rounded-circle bg-primary">
-                                        <i class="fa fa-envelope-open text-white"></i>
-                                    </div>
-                                     <div class="ms-3">
-                                        <p class="mb-2">Email us</p>
-                                        <h5 class="mb-0">info@example.com</h5>
-                                    </div> 
-                                </div>
-                            </div> -->
-    <!-- <div class="col-sm-6">
-                                <div class="d-flex align-items-center">
-                                    <div class="flex-shrink-0 btn-lg-square rounded-circle bg-primary">
-                                        <i class="fa fa-phone-alt text-white"></i>
-                                    </div> -->
-    <!-- <div class="ms-3">
-                                        <p class="mb-2">Call us</p>
-                                        <h5 class="mb-0">+012 345 6789</h5>
-                                    </div>
-                                </div> -->
-
-    <!-- About End -->
-
-
     <!-- Facts Start -->
     <div class="container-fluid facts my-5 p-5">
-        <div class="row g-5">
-            <div class="col-md-6 col-xl-3 wow fadeIn" data-wow-delay="0.1s">
-                <div class="text-center border p-5">
-                    <img src="Image/Home/F1-I1.png" alt="">
-                    <span class="fs-5 fw-semi-bold text-white">Specials</span>
-                </div>
-            </div>
-            <div class="col-md-6 col-xl-3 wow fadeIn" data-wow-delay="0.3s">
-                <div class="text-center border p-5">
-                    <img src="Image/Home/F1-I2.png" alt="">
-                    <span class="fs-5 fw-semi-bold text-white">Petrochemical Studbolts</span>
-                </div>
+        <div class="container">
+            <h3 class="textOrange">Widest Range of Fasteners</h3>
 
-            </div>
-            <div class="col-md-6 col-xl-3 wow fadeIn" data-wow-delay="0.5s">
-                <div class="text-center border p-5">
-                    <img src="Image/Home/F1-I3.png" alt="">
-                    <span class="fs-5 fw-semi-bold text-white">Stainless Steel</span>
+            <div class="row g-5">
+                <div class="col-md-6 col-xl-3 wow fadeIn" data-wow-delay="0.1s">
+                    <div class="text-center d-flex flex-column border p-5">
+                        <img class="w-100" src="Image/Home/F1-I1.png" alt="">
+                        <p class="fs-5 fw-semi-bold textOrange">Specials</p>
+                    </div>
                 </div>
-            </div>
-            <div class="col-md-6 col-xl-3 wow fadeIn" data-wow-delay="0.7s">
-                <div class="text-center border p-5">
-                    <img src="Image/Home/F1-I4.png" alt="">
-                    <span class="fs-5 fw-semi-bold text-white">Structural Assemblies</span>
+                <div class="col-md-6 col-xl-3 wow fadeIn" data-wow-delay="0.3s">
+                    <div class="text-center d-flex flex-column border p-5">
+                        <img src="Image/Home/F1-I2.png" alt="">
+                        <p class="fs-5 fw-semi-bold textOrange">Petrochemical Studbolts</p>
+                    </div>
+                    
                 </div>
-            </div>
-            <div class="col-md-6 col-xl-3 wow fadeIn" data-wow-delay="0.7s">
-                <div class="text-center border p-5">
-                    <img src="Image/Home/F1-I5.png" alt="">
-                    <span class="fs-5 fw-semi-bold text-white">Washers</span>
+                <div class="col-md-6 col-xl-3 wow fadeIn" data-wow-delay="0.5s">
+                    <div class="text-center d-flex flex-column border p-5">
+                        <img src="Image/Home/F1-I3.png" alt="">
+                        <p class="fs-5 fw-semi-bold textOrange">Stainless Steel</p>
+                    </div>
                 </div>
-            </div>
-            <div class="col-md-6 col-xl-3 wow fadeIn" data-wow-delay="0.7s">
-                <div class="text-center border p-5">
-                    <img src="Image/Home/F1-I6.png" alt="">
-                    <span class="fs-5 fw-semi-bold text-white">Hex Nuts</span>
+                <div class="col-md-6 col-xl-3 wow fadeIn" data-wow-delay="0.7s">
+                    <div class="text-center d-flex flex-column border p-5">
+                        <img src="Image/Home/F1-I4.png" alt="">
+                        <span class="fs-5 fw-semi-bold textOrange">Structural Assemblies</span>
+                    </div>
                 </div>
-            </div>
+                <div class="col-md-6 col-xl-3 wow fadeIn" data-wow-delay="0.7s">
+                    <div class="text-center d-flex flex-column border p-5">
+                        <img src="Image/Home/F1-I5.png" alt="">
+                        <p class="fs-5 fw-semi-bold textOrange">Washers</p>
+                    </div>
+                </div>
+                <div class="col-md-6 col-xl-3 wow fadeIn" data-wow-delay="0.7s">
+                    <div class="text-center d-flex flex-column border p-5">
+                        <img src="Image/Home/F1-I6.png" alt="">
+                        <p class="fs-5 fw-semi-bold textOrange">Hex Nuts</p>
+                    </div>
+                </div>
             <div class="col-md-6 col-xl-3 wow fadeIn" data-wow-delay="0.7s">
-                <div class="text-center border p-5">
+                <div class="text-center d-flex flex-column border p-5">
                     <img src="Image/Home/F1-I7.png" alt="">
-                    <span class="fs-5 fw-semi-bold text-white">Hex Bolts / Screws</span>
+                    <p class="fs-5 fw-semi-bold textOrange">Hex Bolts / Screws</p>
                 </div>
             </div>
             <div class="col-md-6 col-xl-3 wow fadeIn" data-wow-delay="0.7s">
-                <div class="text-center border p-5">
+                <div class="text-center d-flex flex-column border p-5">
                     <img src="Image/Home/F1-I8.png" alt="">
-                    <span class="fs-5 fw-semi-bold text-white">Durlok</span>
+                    <p class="fs-5 fw-semi-bold textOrange">Durlok</p>
                 </div>
             </div>
         </div>
@@ -237,42 +197,42 @@
 
 
     <!-- Features Start -->
-    <div class="container-xxl py-5">
-        <div class="container">
-            <div class="row g-5 align-items-center">
-                <div class="col-lg-3 wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="position-relative me-lg-4">
-                        <img class="img-fluid" style="max-width: 400px;" src="Image/Home/Certification.png" alt="">
+</div>
+<div class="container-xxl py-5">
+    <div class="container">
+        <div class="row g-5 align-items-center">
+            <div class="col-lg-3 wow fadeInUp" data-wow-delay="0.1s">
+                <div class="position-relative me-lg-4">
+                    <img class="img-fluid" style="max-width: 400px;" src="Image/Home/Certification.png" alt="">
 
-                    </div>
-                </div>
-                <div class="col-lg-9 wow fadeInUp" data-wow-delay="0.5s">
-                    <p class="fw-medium text-uppercase text-primary mb-2">Certifications</p>
-                    <h1 class="display-5 mb-4">Certified Laboratory</h1>
-                    <p class="mb-4 text-justify">Based firmly quality system standards. the
-                        company operates each link from raw materials procwsing to
-                        the production process in strict accordance with the procedures
-                        and boasts well-qualified quality inspectors and perfect
-                        equipment's, which take effective control on the production
-                        to ensure quality. The fasteners go through
-                        strict quality at every stage of the
-                        facilities are equipped 'Mth state-of-the-art equipment for testing Of both physical and
-                        of fasteners for the most demarding applications.
-
-                        We provide custom-made solutims Our CustOrT1erS' designs, kæping in mind their and
-                        sgefications. Our custuner base includes leading automotive original equiprnent
-                        manufacturers in
-                        We are the preferred global supplier for a range of automotive cunponents including Machine
-                        Screws, Screws, Hex Head Bolts. SCCket Hex Head Bolts, Hex Nuts, Nuts.
-                        Plain Washers. Spring Washers. Sgmial automobile Components and much more.
-
-                    </p>
                 </div>
             </div>
+            <div class="col-lg-9 wow fadeInUp" data-wow-delay="0.5s">
+                <p class="fw-medium text-uppercase text-primary mb-2">Certifications</p>
+                <h1 class="display-5 mb-4">Certified Laboratory</h1>
+                <p class="mb-4 text-justify">Based firmly quality system standards. the
+                    company operates each link from raw materials procwsing to
+                    the production process in strict accordance with the procedures
+                    and boasts well-qualified quality inspectors and perfect
+                    equipment's, which take effective control on the production
+                    to ensure quality. The fasteners go through
+                    strict quality at every stage of the
+                    facilities are equipped 'Mth state-of-the-art equipment for testing Of both physical and
+                    of fasteners for the most demarding applications.
 
+                    We provide custom-made solutims Our CustOrT1erS' designs, kæping in mind their and
+                    sgefications. Our custuner base includes leading automotive original equiprnent
+                    manufacturers in
+                    We are the preferred global supplier for a range of automotive cunponents including Machine
+                    Screws, Screws, Hex Head Bolts. SCCket Hex Head Bolts, Hex Nuts, Nuts.
+                    Plain Washers. Spring Washers. Sgmial automobile Components and much more.
+
+                </p>
+            </div>
         </div>
+
     </div>
-    </div>
+</div>
     </div>
     </div>
     <!-- Features End -->
@@ -512,7 +472,6 @@
                     <p>To check the validity of the Authorized
                         Distributor Certificate, enter the code mentioned
                         on the certificate below & confirm its authencity.</p>
-
                 </div>
             </div>
         </div>
@@ -521,7 +480,7 @@
 
 
     <!-- Copyright Start -->
-    <div class="container-fluid copyright bg-light py-4">
+    <div class="container-fluid copyright bg-light py-1">
         <div class="container text-center">
             <p class="mb-2">Copyright &copy; <a class="fw-semi-bold" href="#">VH Fasteners</a> All Right
                 Reserved || Designed By : <a class="fw-semi-bold" href="https://htmlcodex.com"> Softcron Technology</a>
