--- a/contact.html
+++ b/contact.html
@@ -93,11 +93,12 @@
             <a href="" class="btn btn-primary px-3 d-none d-lg-block">Get A Quote</a>
         </div>
     </nav>
+    <br><br>
     <!-- Navbar End -->
 
 
     <!-- Page Header Start -->
-    <div class="container-fluid page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
+    <!-- <div class="container-fluid page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
             <h1 class="display-3 text-white animated slideInRight">Contact</h1>
             <nav aria-label="breadcrumb">
@@ -108,9 +109,17 @@
                 </ol>
             </nav>
         </div>
-    </div>
+    </div> -->
     <!-- Page Header End -->
 
+    <div class="container text-center ">
+        <h4 class="text-dark">Contact us</h4>
+        <h1 class="text-dark">Let’s Start a Conversation</h1>
+        <p class=text-dark>Lorem ipsum dolor sit amet, consectetur adipiscing elit <br>sed do eiusmod tempor incididunt
+            ut labore
+            et dolore magna
+            aliqua. Ut enim ad minim. </p>
+    </div>
 
     <!-- Contact Start -->
     <div class="container-xxl py-5">
@@ -118,8 +127,9 @@
             <div class="row g-5 justify-content-center mb-5">
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="bg-light text-center h-100 p-5">
-                        <div class="btn-square bg-white rounded-circle mx-auto mb-4" style="width: 90px; height: 90px;">
-                            <i class="fa fa-phone-alt fa-2x text-primary"></i>
+                        <div class="btn-square bg-primary rounded-circle mx-auto mb-4"
+                            style="width: 90px; height: 90px;">
+                            <i class="fa fa-phone-alt fa-2x text-white"></i>
                         </div>
                         <h4 class="mb-3">Phone Number</h4>
                         <p class="mb-2">+91- 8192888000</p>
@@ -129,8 +139,9 @@
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="bg-light text-center h-100 p-5">
-                        <div class="btn-square bg-white rounded-circle mx-auto mb-4" style="width: 90px; height: 90px;">
-                            <i class="fa fa-envelope-open fa-2x text-primary"></i>
+                        <div class="btn-square bg-primary rounded-circle mx-auto mb-4"
+                            style="width: 90px; height: 90px;">
+                            <i class="fa fa-envelope-open fa-2x text-white"></i>
                         </div>
                         <h4 class="mb-3">Email Address</h4>
                         <p class="mb-2">vhfastners@gmail.com</p>
@@ -140,8 +151,9 @@
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="bg-light text-center h-100 p-5">
-                        <div class="btn-square bg-white rounded-circle mx-auto mb-4" style="width: 90px; height: 90px;">
-                            <i class="fa fa-map-marker-alt fa-2x text-primary"></i>
+                        <div class="btn-square bg-primary rounded-circle mx-auto mb-4"
+                            style="width: 90px; height: 90px;">
+                            <i class="fa fa-map-marker-alt fa-2x text-white"></i>
                         </div>
                         <h4 class="mb-3">Office Address</h4>
                         <p class="mb-2">Factory : HSIDC, Hisar Road, Rohtak
@@ -152,7 +164,8 @@
                     </div>
                 </div>
             </div>
-            <!-- <div class="row mb-5">
+
+            <!-- <div class="row mb-5">             
                 <div class="col-12 wow fadeInUp" data-wow-delay="0.1s">
                     <iframe class="w-100"
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3001156.4288297426!2d-78.01371936852176!3d42.72876761954724!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4ccc4bf0f123a5a9%3A0xddcfc6c1de189567!2sNew%20York%2C%20USA!5e0!3m2!1sen!2sbd!4v1603794290143!5m2!1sen!2sbd"
@@ -160,77 +173,52 @@
                         tabindex="0"></iframe>
                 </div> -->
         </div>
-        <div class="row g-5">
-            <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-                <p class="fw-medium text-uppercase text-primary mb-2">Contact Us</p>
-                <h1 class="display-5 mb-4">If You Have Any Queries, Please Feel Free To Contact Us</h1>
-                <p class="mb-4">The contact form is currently inactive. Get a functional and working contact form
-                    with Ajax & PHP in a few minutes. Just copy and paste the files, add a little code and you're
-                    done. <a href="https://htmlcodex.com/contact-form">Download Now</a>.</p>
-                <div class="row g-4">
-                    <div class="col-6">
-                        <div class="d-flex">
-                            <div class="flex-shrink-0 btn-square bg-primary rounded-circle">
-                                <i class="fa fa-phone-alt text-white"></i>
-                            </div>
-                            <div class="ms-3">
-                                <h6>Call Us</h6>
-                                <span>+91- 8192888000</span>
-                            </div>
+
+        <div class="col-lg-12 wow fadeInUp" data-wow-delay="0.5s">
+            <form>
+                <div class="row g-3">
+                    <div class="col-md-12">
+                        <div class="form-floating">
+                            <input type="text" class="form-control" id="name" placeholder="Your Name">
+                            <label for="name">Your Name</label>
                         </div>
                     </div>
-                    <div class="col-6">
-                        <div class="d-flex">
-                            <div class="flex-shrink-0 btn-square bg-primary rounded-circle">
-                                <i class="fa fa-envelope text-white"></i>
-                            </div>
-                            <div class="ms-3">
-                                <h6>Mail Us</h6>
-                                <span>vhfastners@gmail.com</span>
-                            </div>
+                    <div class="col-md-12">
+                        <div class="form-floating">
+                            <input type="email" class="form-control" id="email" placeholder="Your Email">
+                            <label for="email">Your Email</label>
                         </div>
+                    </div>
+
+                    <div class="col-12">
+                        <div class="form-floating">
+                            <input type="text" class="form-control" id="subject" placeholder="Query Related">
+                            <label for="subject">Query Related</label>
+                        </div>
+                    </div>
+                    <div class="col-12">
+                        <div class="form-floating">
+                            <textarea class="form-control" placeholder="Leave a message here" id="message"
+                                style="height: 150px"></textarea>
+                            <label for="message">Message</label>
+                        </div>
+                    </div>
+                    <div class="col-12">
+                        <button class="btn btn-primary py-3 px-5" type="submit">Send Message</button>
                     </div>
                 </div>
-            </div>
-            <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
-                <form>
-                    <div class="row g-3">
-                        <div class="col-md-6">
-                            <div class="form-floating">
-                                <input type="text" class="form-control" id="name" placeholder="Your Name">
-                                <label for="name">Your Name</label>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="form-floating">
-                                <input type="email" class="form-control" id="email" placeholder="Your Email">
-                                <label for="email">Your Email</label>
-                            </div>
-                        </div>
-                        <div class="col-12">
-                            <div class="form-floating">
-                                <input type="text" class="form-control" id="subject" placeholder="Subject">
-                                <label for="subject">Subject</label>
-                            </div>
-                        </div>
-                        <div class="col-12">
-                            <div class="form-floating">
-                                <textarea class="form-control" placeholder="Leave a message here" id="message"
-                                    style="height: 150px"></textarea>
-                                <label for="message">Message</label>
-                            </div>
-                        </div>
-                        <div class="col-12">
-                            <button class="btn btn-primary py-3 px-5" type="submit">Send Message</button>
-                        </div>
-                    </div>
-                </form>
-            </div>
+            </form>
         </div>
     </div>
     </div>
+    </div>
     <!-- Contact End -->
+    <div class="container text-start">
+        <p> <strong class="text-dark"> Factory :</strong>HSIDC, Hisar Road, Rohtak-124001</p>
+        <p><strong class="text-dark">Branch Office :</strong> 10A , Geeta Complex, Opp Old Session Court Mansarover Colony</p>
+        <p><strong class="text-dark">Rohtak:</strong>124001 Haryana</p>
 
+    </div>
 
     <!-- Footer Start -->
     <div class="container-fluid bg-dark footer mt-5 py-5 wow fadeIn" data-wow-delay="0.1s">
