about us  page fix

--- a/contact.html
+++ b/contact.html
@@ -43,23 +43,19 @@
 
 
     <!-- Topbar Start -->
-    <div class="container-fluid bg-dark px-0">
-        <div class="row g-0 d-none d-lg-flex">
-            <div class="col-lg-6 ps-5 text-start">
-                <div class="h-100 d-inline-flex align-items-center text-white">
-                    <span>Follow Us:</span>
-                    <a class="btn btn-link text-light" href=""><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-link text-light" href=""><i class="fab fa-twitter"></i></a>
-                    <a class="btn btn-link text-light" href=""><i class="fab fa-linkedin-in"></i></a>
-                    <a class="btn btn-link text-light" href=""><i class="fab fa-instagram"></i></a>
-                </div>
-            </div>
-            <div class="col-lg-6 text-end">
-                <div class="h-100 topbar-right d-inline-flex align-items-center text-white py-2 px-5">
-                    <span class="fs-5 fw-bold me-2"><i class="fa fa-phone-alt me-2"></i>Call Us:</span>
-                    <span class="fs-5 fw-bold">+91- 8192888000</span>
-                </div>
-            </div>
+    <div class="d-flex container-fluid px-5 align-items-center border-bottom">
+        <div class="me-auto">
+            <span class="fs-6 fw-bold text-dark"><i class="fa fa-envelope me-1"></i></span>
+            <a href="mailto: vhfastners@gmail.com" class="fs-6 fw-bold text-dark me-2">vhfastners@gmail.com</a>
+            <span class="me-2">|</span>
+            <span class="fs-6 fw-bold text-dark"><i class="fa fa-phone-alt me-1"></i></span>
+            <a href="tel:+918192888000" class="fs-6 fw-bold text-dark">+91- 8192888000</a>
+        </div>
+        <div>
+            <a class="btn btn-link text-dark fs-6 fw-bold" href=""><i class="fab fa-facebook-f"></i></a>
+            <a class="btn btn-link text-dark fs-6 fw-bold" href=""><i class="fab fa-twitter"></i></a>
+            <a class="btn btn-link text-dark fs-6 fw-bold" href=""><i class="fab fa-linkedin-in"></i></a>
+            <a class="btn btn-link text-dark fs-6 fw-bold" href=""><i class="fab fa-instagram"></i></a>
         </div>
     </div>
     <!-- Topbar End -->
@@ -97,20 +93,7 @@
     <!-- Navbar End -->
 
 
-    <!-- Page Header Start -->
-    <!-- <div class="container-fluid page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
-        <div class="container py-5">
-            <h1 class="display-3 text-white animated slideInRight">Contact</h1>
-            <nav aria-label="breadcrumb">
-                <ol class="breadcrumb animated slideInRight mb-0">
-                    <li class="breadcrumb-item"><a href="#">Home</a></li>
-                    <li class="breadcrumb-item"><a href="#">Pages</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">Contact</li>
-                </ol>
-            </nav>
-        </div>
-    </div> -->
-    <!-- Page Header End -->
+
 
     <div class="container text-center ">
         <h4 class="text-dark">Contact us</h4>
@@ -204,7 +187,7 @@
                         </div>
                     </div>
                     <div class="col-12">
-                        <button class="btn btn-primary py-3 px-5" type="submit">Send Message</button>
+                        <button class="btn btn-primary py-3 px-5 w-100" type="submit">Send Message</button>
                     </div>
                 </div>
             </form>
@@ -213,19 +196,24 @@
     </div>
     </div>
     <!-- Contact End -->
-    <div class="container text-start">
+    <div class="container text-start w-100">
         <p> <strong class="text-dark"> Factory :</strong>HSIDC, Hisar Road, Rohtak-124001</p>
-        <p><strong class="text-dark">Branch Office :</strong> 10A , Geeta Complex, Opp Old Session Court Mansarover Colony</p>
+        <p><strong class="text-dark">Branch Office :</strong> 10A , Geeta Complex, Opp Old Session Court Mansarover
+            Colony</p>
         <p><strong class="text-dark">Rohtak:</strong>124001 Haryana</p>
 
     </div>
 
     <!-- Footer Start -->
-    <div class="container-fluid bg-dark footer mt-5 py-5 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-fluid  backgroundOrange    footer mt-5 py-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
-                    <h5 class="text-white mb-4">VH Fastner Limted</h5>
+                    <div class="d-flex gy-3">
+                        <img width="70" height="70" src="Image/Home/Footer_logo-removebg-preview.png" alt="">
+                        <h5 class="text-dark mb-4 ms-3  fs-3"><strong>FASTNERES
+                                <br> LIMITED</strong></h5>
+                    </div>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Factory : HSIDC, Hisar Road, Rohtak-124001
                         Branch Office: 10A, Geeta Complex, Opp Old Session Court
                         Mansarover Colony, Rohtak-124001 Haryana</p>
@@ -233,19 +221,19 @@
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>vhfastners@gmail.com
                     </p>
                     <div class="d-flex pt-3">
-                        <a class="btn btn-square btn-primary rounded-circle me-2" href=""><i
+                        <a class="btn btn-square btn-dark rounded-circle me-2" href=""><i
                                 class="fab fa-twitter"></i></a>
-                        <a class="btn btn-square btn-primary rounded-circle me-2" href=""><i
+                        <a class="btn btn-square btn-dark rounded-circle me-2" href=""><i
                                 class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-square btn-primary rounded-circle me-2" href=""><i
+                        <a class="btn btn-square btn-dark rounded-circle me-2" href=""><i
                                 class="fab fa-youtube"></i></a>
-                        <a class="btn btn-square btn-primary rounded-circle me-2" href=""><i
+                        <a class="btn btn-square btn-dark rounded-circle me-2" href=""><i
                                 class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
 
                 <div class="col-lg-3 col-md-6">
-                    <h5 class="text-white mb-4">Products</h5>
+                    <h5 class="text-dark mb-4">Products</h5>
                     <p class="mb-1">Socket Screws</p>
                     <p class="mb-1">Pins</p>
                     <p class="mb-1">Tools & Wrenches</p>
@@ -258,7 +246,7 @@
                     <p class="mb-1">Specials</p>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <h5 class="text-white mb-4">About Us</h5>
+                    <h5 class="text-dark mb-4">About Us</h5>
                     <p>VH Fasteners Limited</p>
                     <p>History</p>
                     <p>Certifications</p>
@@ -267,12 +255,11 @@
                     <p>Specialized Coatings</p>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <h5 class="text-white mb-4">Distributor
+                    <h5 class="text-dark mb-4">Distributor
                         Certificate</h5>
                     <p>To check the validity of the Authorized
                         Distributor Certificate, enter the code mentioned
                         on the certificate below & confirm its authencity.</p>
-
                 </div>
             </div>
         </div>
@@ -281,14 +268,12 @@
 
 
     <!-- Copyright Start -->
-    <div class="container-fluid copyright bg-dark py-4">
+    <div class="container-fluid copyright bg-light py-1">
         <div class="container text-center">
-            <p class="mb-2">Copyright &copy; <a class="fw-semi-bold" href="#">VH Fasteners</a>, All Right Reserved.
+            <p class="mb-2">Copyright &copy; <a class="fw-semi-bold" href="#">VH Fasteners</a> All Right
+                Reserved || Designed By : <a class="fw-semi-bold" href="https://htmlcodex.com"> Softcron Technology</a>
             </p>
-            <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-            <p class="mb-0">Designed By : <a class="fw-semi-bold" href="https://htmlcodex.com">Softcron Technology</a>
 
-            </p>
         </div>
     </div>
     <!-- Copyright End -->
