about minor fixes

--- a/about.html
+++ b/about.html
@@ -235,17 +235,14 @@
 
     <!-- Team Start -->
     <div class="container-xxl py-5 ">
-        <div class="container">
+        <div class="container ">
             <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
-                <!-- <p class="fw-medium text-uppercase text-primary mb-2">Our Strategic Resources</p> -->
                 <h1 class="display-5 mb-5">Our Strategic Resources</h1>
             </div>
-            <div class="row ">
+            <div class="row">
                 <div class="col-lg-12 col-md-12 wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="team-item">
-                        <img class="img-fluid" src="Image/About/customer.png" alt="">
-                        <div class="d-flex">
-                        </div>
+                    <div class="team-item ">
+                        <img class="w-100" src="Image/About/customer.png" alt="">
                     </div>
                 </div>
             </div>
