--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="navbar-nav ms-auto p-4 p-lg-0">
                 <a href="index.html" class="nav-item nav-link active">Home</a>
                 <a href="about.html" class="nav-item nav-link">About</a>
-                <a href="service.html" class="nav-item nav-link">Services</a>
+                <a href="service.html" class="nav-item nav-link">Product</a>
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                     <div class="dropdown-menu bg-light m-0">
@@ -91,10 +91,30 @@
     </nav>
     <!-- Navbar End -->
 
-
     <!-- Carousel Start -->
-    <div class="container-fluid px-0 mb-5">
-        <img class="w-100" src="Image/Home/herosectionImage.png" alt="Image">
+   <div class="container-fluid px-0 mb-5">
+        <div id="header-carousel" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img class="w-100" style="object-fit: cover;" src="Image/Home/Fasteners.jpg" alt="Image">
+                    <div class="carousel-caption">
+                        <div class="container">
+                            <div class="row justify-content-center">
+                                <div class="col-lg-10 text-start">
+                                    <p class="fs-5 fw-medium text-primary text-uppercase animated slideInRight">10 Years
+                                        of Working Experience</p>
+                                    <h1 class="display-1 text-white mb-5 animated slideInRight">VH Fasteners <br>
+                                        Passion For Precision...
+
+                                    </h1>
+                                    <a href="" class="btn btn-primary py-3 px-5 animated slideInRight">Explore More</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <!-- Carousel End -->
 
@@ -139,54 +159,54 @@
     <!-- Facts Start -->
     <div class="container-fluid facts my-5 p-5">
         <div class="container">
-            <h3 class="textOrange">Widest Range of Fasteners</h3>
+            <h2 class="textOrange py-5">Widest Range of Fasteners</h2>
 
             <div class="row g-5">
                 <div class="col-md-6 col-xl-3 wow fadeIn" data-wow-delay="0.1s">
-                    <div class="text-center d-flex flex-column border p-5">
+                    <div class="text-center d-flex flex-column border ">
                         <img class="w-100" src="Image/Home/F1-I1.png" alt="">
                         <p class="fs-5 fw-semi-bold textOrange">Specials</p>
                     </div>
                 </div>
                 <div class="col-md-6 col-xl-3 wow fadeIn" data-wow-delay="0.3s">
-                    <div class="text-center d-flex flex-column border p-5">
+                    <div class="text-center d-flex flex-column border">
                         <img src="Image/Home/F1-I2.png" alt="">
                         <p class="fs-5 fw-semi-bold textOrange">Petrochemical Studbolts</p>
                     </div>
 
                 </div>
                 <div class="col-md-6 col-xl-3 wow fadeIn" data-wow-delay="0.5s">
-                    <div class="text-center d-flex flex-column border p-5">
+                    <div class="text-center d-flex flex-column border ">
                         <img src="Image/Home/F1-I3.png" alt="">
                         <p class="fs-5 fw-semi-bold textOrange">Stainless Steel</p>
                     </div>
                 </div>
                 <div class="col-md-6 col-xl-3 wow fadeIn" data-wow-delay="0.7s">
-                    <div class="text-center d-flex flex-column border p-5">
+                    <div class="text-center d-flex flex-column border ">
                         <img src="Image/Home/F1-I4.png" alt="">
                         <span class="fs-5 fw-semi-bold textOrange">Structural Assemblies</span>
                     </div>
                 </div>
                 <div class="col-md-6 col-xl-3 wow fadeIn" data-wow-delay="0.7s">
-                    <div class="text-center d-flex flex-column border p-5">
+                    <div class="text-center d-flex flex-column border ">
                         <img src="Image/Home/F1-I5.png" alt="">
                         <p class="fs-5 fw-semi-bold textOrange">Washers</p>
                     </div>
                 </div>
                 <div class="col-md-6 col-xl-3 wow fadeIn" data-wow-delay="0.7s">
-                    <div class="text-center d-flex flex-column border p-5">
+                    <div class="text-center d-flex flex-column border ">
                         <img src="Image/Home/F1-I6.png" alt="">
                         <p class="fs-5 fw-semi-bold textOrange">Hex Nuts</p>
                     </div>
                 </div>
                 <div class="col-md-6 col-xl-3 wow fadeIn" data-wow-delay="0.7s">
-                    <div class="text-center d-flex flex-column border p-5">
+                    <div class="text-center d-flex flex-column border ">
                         <img src="Image/Home/F1-I7.png" alt="">
                         <p class="fs-5 fw-semi-bold textOrange">Hex Bolts / Screws</p>
                     </div>
                 </div>
                 <div class="col-md-6 col-xl-3 wow fadeIn" data-wow-delay="0.7s">
-                    <div class="text-center d-flex flex-column border p-5">
+                    <div class="text-center d-flex flex-column border ">
                         <img src="Image/Home/F1-I8.png" alt="">
                         <p class="fs-5 fw-semi-bold textOrange">Durlok</p>
                     </div>
