--- a/service.html
+++ b/service.html
@@ -108,7 +108,7 @@
         <div class="navbar-nav ms-auto p-4 p-lg-0">
           <a href="index.html" class="nav-item nav-link">Home</a>
           <a href="about.html" class="nav-item nav-link">About</a>
-          <a href="service.html" class="nav-item nav-link active">Services</a>
+          <a href="service.html" class="nav-item nav-link active">Product</a>
           <div class="nav-item dropdown">
             <a
               href="#"
